Update to Java 20, finish basic spline editor